--- a/app/src/main/res/layout/fragment_race_list.xml
+++ b/app/src/main/res/layout/fragment_race_list.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+        android:id="@+id/recyclerView"
         android:name="com.pedrojtmartins.racingcalendar.Views.RaceListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
