--- a/app/src/main/res/layout/fragment_race.xml
+++ b/app/src/main/res/layout/fragment_race.xml
@@ -8,68 +8,75 @@
             type="com.pedrojtmartins.racingcalendar.Models.Race"/>
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginRight="15dp"
-            android:orientation="horizontal">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:text="Aug 28"/>
-            <!--android:text="@{data.date}"-->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14:00"/>
-            <!--android:text="@{data.hour}"-->
-        </LinearLayout>
+                android:layout_gravity="end"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="@{data.simplifiedDate}"/>
 
-            <TextView
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_margin="5dp"
-                android:background="#535353"
-                android:gravity="center"
-                android:text="F1"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{data.hour}"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="5dp"
+                    android:background="#535353"
+                    android:gravity="center"
+                    android:text="F1"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Brazilian GP"
-                    android:textSize="18sp"
-                    />
-                <!--android:text="@{data.raceNumber}"-->
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/track"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Interlagos"
-                    />
-                <!--android:text="@{data.track}"-->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@{data.name}"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/track"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{data.location}"/>
+
+                </LinearLayout>
+
             </LinearLayout>
-        </LinearLayout>
-    </FrameLayout>
+
+        </FrameLayout>
+
+        <include layout="@layout/list_divider"/>
+
+    </LinearLayout>
 </layout>
