--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
         <item name="android:padding">8dp</item>
         <item name="android:textColor">#000</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:gravity">center_horizontal</item>
+        <!--<item name="android:gravity">center_horizontal</item>-->
     </style>
 
 </resources>
