--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:background="#eee"
+            android:background="#f2f2f2"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -127,8 +127,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#0000"/>
+            android:layout_height="2dp"
+            android:background="#0ccc"/>
 
     </LinearLayout>
     <!--<LinearLayout-->
