Update series fragment layout

--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -4,7 +4,7 @@
 
     <data></data>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -25,5 +25,6 @@
             android:layout_height="match_parent"
             android:padding="8dp"/>
 
-    </LinearLayout>
+
+    </FrameLayout>
 </layout>
