--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -4,7 +4,7 @@
 
     <data></data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -25,6 +25,5 @@
             android:layout_height="match_parent"
             android:padding="8dp"/>
 
-
-    </FrameLayout>
+    </LinearLayout>
 </layout>
