--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:visibility="gone"
             ads:adSize="SMART_BANNER"
             ads:adUnitId="@string/admob_main_ad_id">
         </com.google.android.gms.ads.AdView>
