--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,13 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-<data></data>
-    <android.support.v7.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recyclerView"
-        android:name="com.pedrojtmartins.racingcalendar.Views.RaceListFragment"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="data"
+            type="com.pedrojtmartins.racingcalendar.Models.Series"/>
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.pedrojtmartins.racingcalendar.Views.Fragments.RaceListFragment"
-        tools:listitem="@layout/row_race"/>
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/list_header"
+            style="@style/SeriesRowBackground"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/back_black"/>
+
+            <TextView
+                style="@style/SeriesRowText"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:text="@{data.name}"/>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/recyclerView"
+            android:name="com.pedrojtmartins.racingcalendar.Views.RaceListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.pedrojtmartins.racingcalendar.Views.Fragments.RaceListFragment"
+            tools:listitem="@layout/row_race"/>
+    </LinearLayout>
 </layout>
