--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -9,19 +9,12 @@
             type="com.pedrojtmartins.racingcalendar.Models.Series"/>
     </data>
 
+    <FrameLayout
+        style="@style/SeriesRowBackground">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:background="#f2f2f2"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:lines="1"
-        android:padding="16dp"
-        android:text="@{data.name}"
-        android:textColor="#333"
-        android:textSize="16sp"
-        tools:text="F1 - Formula 1"/>
-
+        <TextView
+            style="@style/SeriesRowText"
+            android:text="@{data.name}"
+            tools:text="F1 - Formula 1"/>
+    </FrameLayout>
 </layout>
