--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -16,18 +16,19 @@
 
         <LinearLayout
             android:id="@+id/list_header"
-            style="@style/SeriesRowBackground"
+            style="@style/SeriesRow"
             android:clickable="true"
             android:orientation="horizontal"
             android:visibility="gone">
 
-            <ImageView
+            <android.support.v7.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/back_black"/>
+                android:tint="@color/arrowsTint"
+                app:srcCompat="@drawable/left_arrow_black"/>
 
             <TextView
-                style="@style/SeriesRowText"
+                style="@style/SeriesTitle"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:text="@{data.name}"/>
