--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,21 +43,28 @@
 
 
     <!--Series row-->
-    <style name="SeriesRowBackground">
+    <style name="SeriesRowParent">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">2dp</item>         <item name="android:orientation">vertical</item>
+
+    </style>
+
+    <style name="SeriesRow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
         <item name="android:background">#f2f2f2</item>
-        <item name="android:layout_marginBottom">2dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:padding">16dp</item>
     </style>
 
-    <style name="SeriesRowText">
+    <style name="SeriesTitle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:lines">1</item>
         <item name="android:textColor">#333</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
