--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.Models.Race"/>
+            type="com.pedrojtmartins.racingcalendar.models.Race"/>
 
         <import type="android.view.View"/>
     </data>
