--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pedrojtmartins.racingcalendar.Views.Activities.SettingsActivity">
+    tools:context="com.pedrojtmartins.racingcalendar.views.activities.SettingsActivity">
 
 </android.support.constraint.ConstraintLayout>
