--- a/app/src/main/res/layout/card_series.xml
+++ b/app/src/main/res/layout/card_series.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.Models.Series"/>
+            type="com.pedrojtmartins.racingcalendar.models.Series"/>
     </data>
 
     <android.support.v7.widget.CardView
