--- a/app/src/main/res/layout/row_series_selection.xml
+++ b/app/src/main/res/layout/row_series_selection.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.Models.Series"/>
+            type="com.pedrojtmartins.racingcalendar.models.Series"/>
     </data>
 
 
