--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,11 @@
     <color name="arrowsTint">#9b9b9b</color>
 
     <color name="seriesProgressbarBackground">#9b9b9b</color>
+
+
+
+    <color name="tintDisabled">#dfdfdf</color>
+    <color name="tintEnabled">#000</color>
+
+
 </resources>
