--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.models.Series"/>
+            type="com.pedrojtmartins.racingcalendar.models.Series" />
     </data>
 
     <LinearLayout
@@ -24,24 +24,24 @@
             <android.support.v7.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:rotation="180"
                 android:tint="@color/arrowsTint"
-                app:srcCompat="@drawable/left_arrow_black"/>
+                app:srcCompat="@drawable/arrow_black" />
 
             <TextView
                 style="@style/SeriesTitle"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:text="@{data.name}"/>
+                android:text="@{data.name}" />
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/recyclerView"
             android:name="com.pedrojtmartins.racingcalendar.Views.RaceListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.pedrojtmartins.racingcalendar.views.fragments.RaceListFragment"
-            tools:listitem="@layout/row_race"/>
+            tools:listitem="@layout/row_race" />
     </LinearLayout>
 </layout>
