--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:icon">@color/icons</item>
+
+        <!--&lt;!&ndash;To change the text styling of options menu items</item>&ndash;&gt;-->
+        <item name="android:itemTextAppearance">@style/MyActionBar.MenuTextStyle</item>
+        <!--To change the background of options menu-->
+        <item name="android:itemBackground">#fafafa</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -14,9 +19,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="MyActionBar.MenuTextStyle" parent="style/TextAppearance.AppCompat">
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
     <!--List divider-->
     <style name="ListDividerTopRow">
@@ -46,7 +55,8 @@
     <style name="SeriesRowParent">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">2dp</item>         <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:orientation">vertical</item>
 
     </style>
 
